--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'General Sans', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+@media screen and (max-width: 427px) {
+    .job_menu {
+        position: fixed;
+        top: 60px;
+        left: 0;
+    }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+    .open_container {
+        width: 80%;
+        height: 100%;
+        position: absolute;
+        top: 48px;
+        right: 0;
+        padding: 24px;
+        animation: expandWidth 0.4s forwards;
+    }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    @keyframes expandWidth {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 80%;
+        }
+    }
+
+    .actions_menu {
+        position: fixed;
+    }
 }
